k8s/order.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order
spec:
  selector:
    matchLabels:
      app: order

  template:
    metadata:
      labels:
        app: order
    spec:
      containers:
        - name: order
          image: paulogabrieljb/ms-order:0.1
---
apiVersion: v1
kind: Service
metadata:
  name: order-service
  labels:
    app: order-service
spec:
  ports:
    - protocol: TCP
      port: 65535
  selector:
    app: order
