k8s/payment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment
spec:
  selector:
    matchLabels:
      app: payment

  template:
    metadata:
      labels:
        app: payment
    spec:
      containers:
        - name: payment
          image: paulogabrieljb/ms-payment:0.1
---
apiVersion: v1
kind: Service
metadata:
  name: payment-service
  labels:
    app: payment-service
spec:
  ports:
    - protocol: TCP
      port: 65535
  selector:
    app: payment
