k8s/catalog.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catalog
spec:
  selector:
    matchLabels:
      app: catalog

  template:
    metadata:
      labels:
        app: catalog
    spec:
      containers:
        - name: catalog
          image: paulogabrieljb/ms-catalog:0.1
          ports:
            - containerPort: 3000
          resources:
            limits:
              cpu: 500m
              memory: 1G
            requests:
              cpu: 200m
              memory: 512M
---
apiVersion: v1
kind: Service
metadata:
  name: catalog-service
  labels:
    app: catalog-service
spec:
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 3000
  selector:
    app: catalog
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: checkout-ingress
  labels:
    name: checkout-ingress
spec:
  rules:
  - host: checkout.info
    http:
      paths:
      - pathType: Prefix
        path: "/catalog"
        backend:
          service:
            name: catalog-service
            port: 
              number: 3000
