k8s/checkout.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: checkout
spec:
  selector:
    matchLabels:
      app: checkout

  template:
    metadata:
      labels:
        app: checkout
    spec:
      containers:
        - name: checkout
          image: paulogabrieljb/ms-checkout:0.1
          ports:
            - containerPort: 8082
          resources:
            limits:
              cpu: 500m
              memory: 1G
            requests:
              cpu: 200m
              memory: 512M
---
apiVersion: v1
kind: Service
metadata:
  name: checkout-service
  labels:
    app: checkout-service
spec:
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 8082
  selector:
    app: checkout
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: checkout-ingress
  labels:
    name: checkout-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: checkout.info
    http:
      paths:
      - pathType: Prefix
        path: /(.+)
        backend:
          service:
            name: checkout-service
            port: 
              number: 8082
