k8s/product.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product
spec:
  selector:
    matchLabels:
      app: product
  replicas: 1
  template:
    metadata:
      labels:
        app: product
    spec:
      containers:
        - name: product
          image: paulogabrieljb/ms-products:0.1
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 3
            periodSeconds: 3
          ports:
          - containerPort: 8000
          resources:
            limits:
              cpu: 500m
              memory: 1G
            requests:
              cpu: 200m
              memory: 512M
          
---
apiVersion: v1
kind: Service
metadata:
  name: product-service
  labels:
    app: product-service
spec:
  type: NodePort
  ports:
    - protocol: TCP
      port: 8000
  selector:
    app: product

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: product-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: products.info
    http:
      paths:
      - path: /product
        pathType: Prefix
        backend:
          service:
            name: product-service
            port:
              number: 8000
